# voice-agent

./: .gitignore  CLAUDE.md  LICENSE.txt  Makefile  README.md
.github/workflows/: ci.yml
configs/: default-prompt.md  default.yaml  ministral3.yaml  openai-ja.yaml  openai.yaml  qwen3.yaml  system-prompt.md
crates/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/lib/: Cargo.toml  build.rs  uniffi-bindgen.rs
crates/lib/src/: agent.udl  capture.rs  event_router.rs  harmony.rs  lib.rs  llm.rs  llm_local.rs  mcp.rs  mcp_client.rs  mcp_client_http.rs  mcp_server.rs  mcp_server_http.rs  memory.rs  react.rs  situation.rs  skill.rs  state_capsule.rs  state_updater.rs  tool.rs
docs/: BACKCHANNEL_SUCCESS.md  CONFIGURATION.md  ENV_VAR_SETUP.md  LANGUAGE_CLIENT.md  LANGUAGE_CLIENT_SUCCESS.md  MAKEFILE_TARGETS.md  MAX_TOKENS_FIX.md  OPENAI_SETUP.md  PLAN_MCP.md  VOICE_PROCESSING_IO.md
scripts/: build-ios.sh  claude-hook.sh  dev_run.sh  download_whisper_model.sh  gen_uniffi.sh  install-claude-hook.sh  start_llm.sh  test_integration.sh  test_openai.sh  test_tools.sh
skills/claude-activity-report/: SKILL.md
skills/screen-analysis/: SKILL.md
swift/: Package.swift
swift/AgentApp/: .gitignore
swift/AgentApp/AgentApp/: AgentAppApp.swift  AgentViewModel.swift  ContentView.swift  hash_shim.cpp
swift/AgentApp/AgentAppTests/: AgentAppTests.swift
swift/AgentApp/AgentAppUITests/: AgentAppUITests.swift  AgentAppUITestsLaunchTests.swift
swift/AgentApp/Bridge/: agent_coreFFI.h  module.modulemap
swift/Sources/AgentBridge/: AgentFFI.swift  agent_core.swift
swift/Sources/AgentBridgeFFI/: agent_coreFFI.h
swift/Sources/AgentKit/: AgentSession.swift
swift/Sources/Audio/: AudioCapture.swift  AudioStreamManager.swift  (+2 more)
(+23 files in other folders)
