[workspace]
resolver = "2"
members = [
    "lib",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Voice Agent Contributors"]

[workspace.dependencies]
# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# HTTP client (blocking)
ureq = { version = "2.10", features = ["json", "native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server (sync)
tiny_http = "0.12"

# UniFFI
uniffi = "0.28"
